Fix tweet text content overflow bug

--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -41,7 +41,9 @@ article {
 
   .userTweet {
     font-weight: 600;
+    margin-right: 1.7em;
     margin-left: 1.7em;
+    overflow-wrap: anywhere;
   }
 
   footer {
